# workspace-root-patch

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  build.rs
.github/workflows/: ci.yml  publish.yml
src/: lib.rs  main.rs
tests/: install_standalone.rs
tests/resources/simple-package/: Cargo.toml
tests/resources/simple-package/src/: main.rs
tests/resources/simple-workspace-package/: Cargo.toml
tests/resources/simple-workspace-package/src/: main.rs
tests/resources/workspace-package/simple-member/: Cargo.toml
