[package]
name = "project-root-patch"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Michael Ilyin <milyin@gmail.com>"]
repository = "https://github.com/milyin/project-root-patch"
description = "Patch project-root so external crates can find the consuming Cargo workspace"
keywords = ["cargo", "workspace", "build-script", "reflection"]
categories = ["development-tools::cargo-plugins"]
rust-version = "1.85"
readme = "README.md"
publish = ["crates-io"]
include = [
    "/src/**",
    "/tests/**",
    "/Cargo.lock",
    "/README.md",
    "/RELEASING.md",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
]

[dependencies]
anyhow = "1"
toml_edit = "0.22"
pathdiff = "0.2"
tempfile = "3"

[[bin]]
name = "cargo-project-root-patch"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
